--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -48,6 +48,7 @@
 }
 .flexslider .slides > li {
   display: none;
+  position:relative;
   -webkit-backface-visibility: hidden;
 }
 .flexslider .slides img {
